styles/main_styles.css
/* 
colors:
- #589ee6 (light blue)
- #4586c0 (darker blue)
- #356d9c (dark blue)
*/
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    font-family: 'Roboto', Arial, sans-serif;;
    /* border: 1px solid black; */
}

body {
    background-color: #f0f0f0;
    color: #414141;
    width: 100%;
}

a {
    text-decoration: none;
    color: inherit;
}

/* Small devices (phones, large phones and portrait tablets, 768px and down) */
@media only screen and (max-width: 768px) {
    /* Navigation styles */
    header.desktop-display {
        display: none;
    }
    header {
        box-shadow: 0 7px 7px -10px rgba(0, 0, 0, 0.5);
    }
    .company-name {
        font-size: 2rem;
        font-weight: 1000;
        color: #928406;
        font-family: 'Bad Script', sans-serif;
        width: 80%;
        margin: 0 auto;
        padding-top: 15px;
        display: block;
        /* border: 1px solid white; */
    }

    .nav-links {
        display: flex;
        flex-direction: row;
        justify-content: space-around;
        align-items: center;
        position: fixed;
        bottom: 0;
        left: 0;
        background-color: #f0f0f0;
        width: 100%;
        height: 75px;
        box-shadow: 0 5px 5px 10px rgba(0, 0, 0, 0.1);
        /* Safe area support for iPhones */
        padding-bottom: env(safe-area-inset-bottom);
        /* For backward compatibility with older iOS versions */
        padding-bottom: constant(safe-area-inset-bottom);
    }

    .nav-links a {
        width: 65px;
    }
    .nav-links .link {
        width: 100%;
        height: 100%;
        text-align: center;
    }

    header .icon {
        width: 35px;
        height: 35px;
    }

    .link .icon-name {
        font-size: 16px;
        font-weight: 700;
    }

    /* Footer styles */
    .btn-book-meeting {
        background-color: #4586c0;
        color: #f0f0f0;
    }

    .btn-book-meeting:hover {
        background-color: #928406;
        color: #f0f0f0;
    }

    footer {
        margin-bottom: 100px;
    }
    
}

@media only screen and (min-width: 768px) {
    /* Navigation bar styles */
    header.mobile-display {
        display: none;
    }

    header {
        display: flex;
        justify-content: space-between;
        align-items: center;
        width: 80%;
        height: 100px;
        margin: 0 auto;
        background-color: #f0f0f0;
        box-shadow: 0 7px 7px -10px rgba(0, 0, 0, 0.5);
    }

    .company-name {
        font-size: 2rem;
        font-weight: 1000;
        color: #928406;
        width: max-content;
        font-family: 'Bad Script', sans-serif;
    }

    .nav-links {
        display: flex;
        align-items: center;
        justify-content: space-between;
        height: 100%;
        gap: 20px;
    }

    .nav-links a {
        font-size: 1.4em;
        font-weight: 600;
        width: max-content;
        height: max-content;
        color: #414141;
        transition: all 0.1s ease-in-out;
    }

    .nav-links:hover a.link {
        color: #9b9b9b;
    }

    .nav-links a.link:hover {
        color: #928406;
        transform: scale(1.05);
    }

    /* Footer styles */
    .btn-book-meeting {
        background-color: #f0f0f0;
        color: #414141;
    }

    .btn-book-meeting:hover {
        background-color: #4586c0;
        color: #f0f0f0;
    }


}

/* Footer styles */
footer {
    background-color: #414141;
    /* color:#928406; */
    color: #f0f0f0;
    text-align: center;
    padding: 1em;
    margin-top: 50px;
    /* height: 35vh; */
}

.book-meeting {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 1em;
    /* padding: 1em; */
    height: 100%;
}

.book-meeting p {
    font-size: 2rem;
    font-weight: 900;
    color: #928406;
    margin-top: 20px;
}

.btn-book-meeting {
    margin-top: 20px;
    margin-bottom: 50px;
    border: none;
    padding: 0.8em 1.5em;
    font-size: 1.2rem;
    font-weight: 600;
    border-radius: 5px;
    cursor: pointer;
    transition: all 0.3s ease-in-out;
}

footer hr {
    width: 70%;
    margin: 0 auto;
}

footer .heading {
    color: #928406;
    margin-top: 40px;
    font-size: 1.75em;
    font-weight: 900;
}

.copyright {
    margin-top: 1em;
}

/* General purpose css */
.hidden {
    display: none;
}

